# gman

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  excel.md  getting-started.md  index.md  tokens.md  tui.md  usage.md
src/gman/: __init__.py  bulk.py  capabilities.py  cli.py  client.py  details.py  excel.py  tui.py
tests/: conftest.py  test_bulk.py  test_capabilities.py  test_cli.py  test_client.py  test_details.py  test_excel.py  test_tui_logic.py
